# QoolUI

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.qtds  README.en.md  README.md  README.org
design/: cool_design.sketch
exampleapp/: CMakeLists.txt  ExamplePageLoader.qml  PageSelector.qml  PagesModel.qml  main.cpp  main.qml  qml.qrc  table_of_pages.xml
exampleapp/Pages/: CutCornerBoxPage.qml  DecorationControlsPage.qml  DialogPage.qml  DigitalNumberPage.qml  ExpPage.qml  FrontPage.qml  InputControlsPage.qml  MenuPage.qml  QoolButtonsPage.qml  QoolButtonsPage_2.qml  RoundCornerBoxPage.qml  ScrollTextPage.qml  TooltipPage.qml
exampleapp/Pages/ExtraControls/: ClickBar.qml  ClickButton.qml
src/: CMakeLists.txt  qml_cool_stuff.qrc  qool_ui_resources.qrc
src/Qool/Components/: Colorist.qml  ControlLockedCover.qml  CutCornerBox.qml  CutCornerControlBack.qml  CutCornerHighlightCover.qml  DigitalNumber.qml  DragMoveArea.qml  RoundCornerBox.qml  SmallIndicator.qml  WindowCloseButton.qml  qmldir
src/Qool/Controls/: Qool.qml  QoolAbstractButton.qml  QoolButton.qml  QoolButtonGroup.qml  QoolButtonGroupManager.qml  QoolControl.qml  QoolDialogButton.qml  QoolDialogWindow.qml  QoolMenu.qml  QoolMenuBanner.qml  QoolMenuBar.qml  QoolMenuItem.qml  QoolMenuSeparator.qml  QoolPane.qml  QoolPopup.qml  QoolRadioButton.qml  QoolTabBar.qml  QoolTabButton.qml  QoolTextButton.qml  QoolTextField.qml  QoolToolTip.qml  QoolToolTipWindow.qml  QoolWindow.qml  qmldir
src/Qool/Controls/Decorations/: QoolCharScrollText.qml  QoolDigitalTImecode.qml  QoolScrollBanner.qml  QoolWiggleScrollText.qml  qmldir
src/Qool/Controls/Inputs/: BasicInputControl.qml  BasicInputSmallButton.qml  QoolCheckableControl.qml  QoolColorControl.qml  QoolDragNumberControl.qml  QoolSpinControl.qml  QoolSpinNumberControl.qml  QoolSwitchControl.qml  QoolTextInputControl.qml  internal_functions.js  qmldir
src/Qool/Styles/: QoolStyle.qml  qmldir
src/Qool/assets/: color_name_table.csv  digital_number_map.csv
src/qoolui_cpp/: basiccolorist.cpp  basiccolorist.h  basiccutcornerbox.cpp  basiccutcornerbox.h  basicdigitalnumber.cpp  basicdigitalnumber.h  basicqoolbuttongroup.cpp  basicqoolbuttongroup.h  basicroundcornerbox.cpp  basicroundcornerbox.h  basicwindowclosebutton.cpp  basicwindowclosebutton.h  qool_global.h  qool_register_classes.h
